[IMPROVEMENT] - added JAVA_ANT_OPTS and updated Readme.md